ecmascript/parser/tests/test262-error-references/fail/dcdc6f42d4d981d6.js.stderr
error: Expected (, got .
 --> $DIR/tests/test262-parser/fail/dcdc6f42d4d981d6.js:1:3
  |
1 | if.a;
  |   ^

